crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@fibo_workflow_each_stage_replay_3_advance_4.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "json!({\n    \"version\": advance.version.0, \"outcome\": format!(\"{:?}\", advance.outcome),\n    \"trim_to\": trim_to, \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n})"
---
{
  "version": 9,
  "outcome": "Applied",
  "trim_to": null,
  "requested_captured_writes_len": 1,
  "replayed_captured_writes_len": 1
}
