crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@fibo_workflow_each_stage_replay_3_replay_2.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: redact_replay(&replay)
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000003",
        "version": 7,
        "req": {
          "created_at": "1970-01-01T00:00:00.400Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00.400Z",
                "requested_ffqn": "testing:fibo/fibo.fibo",
                "closing": false
              }
            }
          }
        },
        "backtraces": []
      }
    }
  ]
}
