crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@fibo_workflow_each_stage_replay_3_replay_4.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000003",
        "version": 9,
        "req": {
          "created_at": "1970-01-01T00:00:01Z",
          "event": {
            "finished": {
              "retval": {
                "ok": {
                  "type": "u64",
                  "value": 55
                }
              },
              "http_client_traces": null
            }
          }
        }
      }
    }
  ]
}
