crates/wasm-workers/src/workflow/snapshots/workflow_js_replay_call_stub.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: replay.history_events()
---
[
  {
    "type": "join_set_create",
    "join_set_id": "g:1"
  },
  {
    "type": "join_set_request",
    "join_set_id": "g:1",
    "request": {
      "type": "child_execution_request",
      "child_execution_id": "E_00000000000000000000000000.g:1_1",
      "target_ffqn": "testing:stub-activity/activity.foo",
      "params_hash": "sha256:21a041d81e9674b5b8fba167170fdb0375220aa2325070ab8b91400197fb8b87",
      "params": [
        "test-input"
      ],
      "result": {
        "Ok": null
      }
    }
  }
]
